# float-timer

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  app.css
src/components/: BreakPicker.tsx  BreakPrompt.tsx  CategorySelect.tsx  DurationPicker.tsx  SessionHistory.tsx  TaskForm.tsx  TimerControls.tsx  TimerDisplay.tsx
src/constants/: categories.ts  durations.ts
src/hooks/: useTimer.ts
src/services/: desktopWindow.ts  sessionStorage.ts  time.ts
src/types/: session.ts  task.ts  timer.ts
