[package]
name = "float-timer"
version = "0.1.0"
description = "A focused desktop timer."
authors = ["Float Timer"]
edition = "2021"

[lib]
name = "float_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
